--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,14 @@
 
   <groupId>co.cask.hydrator.plugins</groupId>
   <artifactId>pdf-extractor-transform</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>PDF Extractor Transform</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>4.2.0-SNAPSHOT</cdap.version>
+    <cdap.version>4.1.1</cdap.version>
     <guava.version>19.0</guava.version>
     <pdfbox.version>2.0.4</pdfbox.version>
     <bouncycastle.version>1.45</bouncycastle.version>
